fix the dark mode of the cards

--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,8 @@ body.dark{
     --toggle-color: #fff;
     --text-color: #000000;
     --background-color:#a19f9f;
-    
 }
+
 body.dark h1{
     color: white;
 }
@@ -49,10 +49,20 @@ body.dark h1{
 body.dark .sidebar span{
     color: white;
 }
+
 body.dark .sidebar i{
     color: white;
 }
 
+body.dark .forecast {
+    background-color: #343131; 
+    color: white; 
+}
+
+body.dark .widget1 {
+    background-color: #343131;
+    color: white;
+}
 
 .sidebar{
     position: fixed;
@@ -65,6 +75,7 @@ body.dark .sidebar i{
     transition: var(--tran-05);
     z-index: 100;  
 }
+
 .sidebar.close{
     width: 88px;
 }
@@ -332,10 +343,12 @@ section.home {
     width: 100%;
     margin: 10px;
 }
+
 .search-container #search{
     width: 70px;
     border: none;
 }
+
 .search-container input {
     width: 500px;
     height: 50px;
@@ -374,11 +387,16 @@ section.home {
     border-radius: 20px;
     align-items: center;
     justify-content: center;
-    
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
 }
 
 #page1 .widget1 p{
     padding: 10px;
+}
+
+#page1 .widget1:hover {
+    transform: scale(1.1);
 }
 
 #page1 .forecast-container {
@@ -410,8 +428,12 @@ section.home {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+    transition: all 0.2s ease-in;
+    cursor: pointer;
+}
 
+.forecast:hover {
+    transform: scale(1.1);
 }
 
 .widget1-container #weather-info{
