--- a/css/style_about_us.css
+++ b/css/style_about_us.css
@@ -1,6 +1,6 @@
 .home .text .About{
     margin: 40px;
-    text-align: justify;
+    text-align: center;
 }
 .home .text h2{
     text-align: center;
@@ -44,5 +44,5 @@
 .member p {
     color: #555;
     line-height: 1.5;
-    text-align: left;
+    text-align: center;
 }
